deploy/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: malware-cryptominer-container
  namespace: malware-detection
spec:
  type: ClusterIP
  selector:
    app: malware-cryptominer-container
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
